--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "directories": {
     "test": "test"
   },
+  "engines": {
+    "node": "6.9.2",
+    "npm": "3.10.9"
+  },
+  "scripts": {
+    "postinstall": "webpack"
+  },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
