--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "node": "6.2.1",
     "npm": "3.9.3"
   },
-  "scripts": {
-    "postinstall": "webpack"
-  },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
@@ -34,6 +31,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0"
   },
   "scripts": {
+    "postinstall": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
